// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`PrettyError render() should work 1`] = `
"    Error: expect(received).toBe(expected)
    
    Expected: "b"
    Received: "a"
    
    - toBe
    
    - pretty-error.test.ts:<LINE> <anonymous>
      pretty-error.test.ts:<LINE>:<COL>
    
    - pretty-error.test.ts:<LINE> getCaughtError
      pretty-error.test.ts:<LINE>:<COL>
    
    - pretty-error.test.ts:<LINE> <anonymous>
      pretty-error.test.ts:<LINE>:<COL>
    
"
`;

exports[`PrettyError render() should work 2`] = `
"    TypeError: Array.split is not a function. (In 'Array.split(Object)', 'Array.split' is undefined)
    
    - pretty-error.test.ts:<LINE> <anonymous>
      pretty-error.test.ts:<LINE>:<COL>
    
    - pretty-error.test.ts:<LINE> getCaughtError
      pretty-error.test.ts:<LINE>:<COL>
    
    - pretty-error.test.ts:<LINE> <anonymous>
      pretty-error.test.ts:<LINE>:<COL>
    
"
`;

exports[`PrettyError render() should work 3`] = `
"    Error: Plain error message
"
`;

exports[`PrettyError render() should work 4`] = `
"    Custom Error: Custom error message
"
`;

exports[`PrettyError render() should work 5`] = `
"    UnhandledRejection Error: Error with custom stack
"
`;

exports[`PrettyError render() should work 6`] = `
"    TypeError: PrettyError.someNonExistingFuncion is not a function. (In 'PrettyError.someNonExistingFuncion()', 'PrettyError.someNonExistingFuncion' is undefined)
    
    - pretty-error.test.ts:<LINE> <anonymous>
      pretty-error.test.ts:<LINE>:<COL>
    
    - pretty-error.test.ts:<LINE> getCaughtError
      pretty-error.test.ts:<LINE>:<COL>
    
    - pretty-error.test.ts:<LINE> <anonymous>
      pretty-error.test.ts:<LINE>:<COL>
    
"
`;

exports[`PrettyError render() should render without colors 1`] = `
"  Error: no color
  
  - pretty-error.test.ts:<LINE> <anonymous>
    pretty-error.test.ts:<LINE>:<COL>
  
  - pretty-error.test.ts:<LINE> getCaughtError
    pretty-error.test.ts:<LINE>:<COL>
  
  - pretty-error.test.ts:<LINE> <anonymous>
    pretty-error.test.ts:<LINE>:<COL>
  
"
`;
